# osOS

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  build.zig  build.zig.zon  genimage.sh  index.html  qemu.sh  riscv32-virt.dtb  run.sh  styles.css
.github/workflows/: asm-c-cpp.yml  gh-pages.yml  zigbuild.yml
HAL/: README.md  hal.zig  intermediate.zig  root.zig
arch/: README.md
arch/arm/: entry.zig  link.ld
arch/riscv32/: README.md  entry.zig  exception.zig  kernel.zig  riscv32-virt.dts  setup.zig
arch/x86/: BootInfo.zig  entry.zig  kmain.zig  link.ld  menu.lst  setup.zig
arch_api/riscv32/: exception.zig  memory.zig  riscv32.zig  sbi.zig
arch_api/x86/: x86.zig
architecture/common/: format.zig  oscommon.zig
architecture/riscv32/: common.zig  kernel.zig  link.ld  sbi.zig
assembly_wrappers/: Makefile
boot_utilities/: MultiBoot.zig  bootutils.zig  headers.zig
build_iso/: README.md  main.zig
docs/: README.md  index.html  index.html.begin  index.html.end  main.zig  styles.css
docs/zon/: .gitignore
drivers/: README.md
entry_points/: README.md
format/: IWriter.zig  format.zig  osformat.zig  print.zig  root.zig
kcommon/: kcommon.zig  kformat.zig
kernel_core/: Makefile  README.md  link.ld
kmain/: hal_validation.zig  kmain.zig
libk/: README.md  root.zig
loader/: CMakeLists.txt  Makefile  build.py  build.sh  build_loader.py  loader.s  menu.lst
log/: log.zig  oslog.zig
memory/: SpinLock.zig  memory.zig  root.zig
process/: process.zig  shell.zig
syscall/: README.md  syscall.zig
userland/: README.md
(+97 files in other folders)
